[gd_scene load_steps=2 format=3 uid="uid://dac0hk3y3e3y5"]

[ext_resource type="Script" path="res://Scripts/conductor.gd" id="1_2pd8a"]

[node name="Conductor" type="Node"]
script = ExtResource("1_2pd8a")

[node name="BeatTimer" type="Timer" parent="."]

[node name="TransitionTimer" type="Timer" parent="."]

[connection signal="timeout" from="BeatTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
